<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.example</groupId>
    <artifactId>cocktails</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>cocktails-logic</module>
        <module>cocktails-web</module>
        <module>cocktails-test</module>
    </modules>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <junit4.version>4.13.1</junit4.version>
        <tomee.version>8.0.16</tomee.version>
        <argLine/>
    </properties>

    <distributionManagement>
        <repository>
            <id>intern-admin</id>
            <name>Releases</name>
            <url>http://localhost:8081/repository/maven-intern</url>
        </repository>
        <snapshotRepository>
            <id>intern-admin</id>
            <name>Snapshot</name>
            <url>http://localhost:8081/repository/maven-intern</url>
        </snapshotRepository>
        <site>
            <id>intern-admin</id>
            <url>dav:http://localhost:8081/reports/</url>
        </site>
    </distributionManagement>

    <url>http://www.example.com/</url>

    <scm>
        <developerConnection>scm:git:file://${project.basedir}</developerConnection>
    </scm>

    <reporting>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-project-info-reports-plugin</artifactId>
                <version>3.5.0</version>
            </plugin>
        </plugins>
    </reporting>

    <build>
        <extensions>
            <extension>
                <groupId>org.apache.maven.wagon</groupId>
                <artifactId>wagon-webdav-jackrabbit</artifactId>
                <version>3.5.3</version>
            </extension>
        </extensions>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>3.2.5</version>
                    <configuration>
                        <argLine>@{argLine} --add-opens=java.base/java.lang=ALL-UNNAMED</argLine>
                        <redirectTestOutputToFile>true</redirectTestOutputToFile>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-war-plugin</artifactId>
                    <version>3.4.0</version>
                    <configuration>
                        <failOnMissingWebXml>false</failOnMissingWebXml>
                    </configuration>
                </plugin>

                <plugin>
                    <groupId>org.apache.tomee.maven</groupId>
                    <artifactId>tomee-maven-plugin</artifactId>
                    <version>${tomee.version}</version>
                    <configuration>
                        <args>--add-opens=java.base/java.io=ALL-UNNAMED --add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.rmi/sun.rmi.transport=ALL-UNNAMED -Djdk.attach.allowAttachSelf=true</args>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.hibernate</groupId>
                <artifactId>hibernate-core</artifactId>
                <version>5.3.36.Final</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <profiles>
        <profile>
            <id>test-local</id>

            <build>
                <plugins>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-plugin</artifactId>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-install-plugin</artifactId>
                        <version>3.1.1</version>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>

                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-deploy-plugin</artifactId>
                        <version>3.1.1</version>
                        <configuration>
                            <skip>true</skip>
                        </configuration>
                    </plugin>

                </plugins>
            </build>

        </profile>

        <profile>
            <id>spotbugs</id>

            <reporting>
                <plugins>
                    <plugin>
                        <groupId>com.github.spotbugs</groupId>
                        <artifactId>spotbugs-maven-plugin</artifactId>
                        <version>4.8.4.0</version>
                    </plugin>
                </plugins>
            </reporting>
        </profile>

        <profile>
            <id>check</id>

            <build>
                <plugins>
                    <plugin>
                        <groupId>com.github.spotbugs</groupId>
                        <artifactId>spotbugs-maven-plugin</artifactId>
                        <version>4.8.4.0</version>
                        <executions>
                            <execution>
                                <!--phase>verify</phase-->
                                <goals><goal>check</goal></goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>failsafe</id>

            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.tomee.maven</groupId>
                            <artifactId>tomee-maven-plugin</artifactId>
                        </plugin>

                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-failsafe-plugin</artifactId>
                            <version>3.2.5</version>
                            <configuration>
                                <redirectTestOutputToFile>true</redirectTestOutputToFile>
                            </configuration>
                        </plugin>
                    </plugins>
                </pluginManagement>
            </build>
        </profile>

        <profile>
            <id>surefire-report</id>

            <reporting>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-surefire-report-plugin</artifactId>
                        <version>3.2.5</version>
                    </plugin>
                </plugins>
            </reporting>
        </profile>

        <profile>
            <id>fix-plugin</id>

<!--
            <pluginRepositories>
                <pluginRepository>
                    <id>EvolvedBin Repository</id>
                    <url>https://repo.evolvedbinary.com/repository/exist-db/</url>
                </pluginRepository>
            </pluginRepositories>
-->

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-pdf-plugin</artifactId>
                        <version>1.6.1</version>
                        <dependencies>
<!--
                            <dependency>
                                <groupId>org.apache.maven.doxia</groupId>
                                <artifactId>doxia-sink-api</artifactId>
                                <version>2.0.0-M1</version>
                            </dependency>
-->
<!--
                            <dependency>
                                <groupId>org.apache.xmlgraphics</groupId>
                                <artifactId>fop</artifactId>
                                <version>1.1</version>
                            </dependency>
-->
                        </dependencies>
                    </plugin>
                </plugins>
            </build>


        </profile>

        <profile>
            <id>release</id>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-release-plugin</artifactId>
                        <version>3.0.1</version>
                    </plugin>
                </plugins>
            </build>
        </profile>

        <profile>
            <id>dependency-updates</id>

            <build>
                <plugins>
                    <plugin>
                        <groupId>org.codehaus.mojo</groupId>
                        <artifactId>versions-maven-plugin</artifactId>
                        <version>2.16.2</version>
                        <executions>
                            <execution>
                                <phase>validate</phase>
                                <goals><goal>display-dependency-updates</goal></goals>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

</project>
